<resources>
    <string name="app_name">T5_A3_BanuelosRuizEduardoAlejo</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnResiduo">%</string>
    <string name="btnMultiplicacion">X</string>
    <string name="btnMasMenos">±</string>
    <string name="btnDivision">÷</string>
    <string name="btnSuma">+</string>
    <string name="btnResta">-</string>
    <string name="btnRes">=</string>
    <string name="btnPunto">.</string>
    <string name="btnRaiz">√</string>
    <string name="btnCuadrado">x²</string>
    <string name="btnDivisionUno"> 1/x</string>
    <string name="btnCE">CE</string>
    <string name="btnC">C</string>
    <string name="btnEliminar">⌫</string>
    <string name="btnMC">MC</string>
    <string name="btnMR">MR</string>
    <string name="btnMS">MS</string>
    <string name="btnMmas">M+</string>
    <string name="btnMmenos">M-</string>
    
</resources>