<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtCajaOperaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="70sp"
        android:text="0"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="322dp" />

    <LinearLayout
        style="@style/buttonS">

        <Button
            android:id="@+id/btnResiduo"
            style="@style/buttonNum"
            android:onClick="operaciones"
            android:text="@string/btnResiduo" />

        <Button
            android:id="@+id/btnRaiz"
            style="@style/buttonNum"
            android:onClick="transformaciones"
            android:text="@string/btnRaiz" />

        <Button
            android:id="@+id/btnCuadrado"
            style="@style/buttonNum"
            android:onClick="transformaciones"
            android:text="@string/btnCuadrado" />

        <Button
            android:id="@+id/btnDivisionUno"
            style="@style/buttonNum"
            android:onClick="transformaciones"
            android:text="@string/btnDivisionUno" />
    </LinearLayout>

    <LinearLayout
       style="@style/buttonS">

        <Button
            android:id="@+id/btnCE"
            style="@style/buttonNum"
            android:onClick="opcionesEliminar"
            android:text="@string/btnCE" />

        <Button
            android:id="@+id/btnC"
            style="@style/buttonNum"
            android:onClick="opcionesEliminar"
            android:text="@string/btnC" />

        <Button
            android:id="@+id/btnEliminar"
            style="@style/buttonNum"
            android:onClick="opcionesEliminar"
            android:text="@string/btnEliminar" />

        <Button
            android:id="@+id/btnDivision"
            style="@style/buttonNum"
            android:onClick="operaciones"
            android:text="@string/btnDivision" />
    </LinearLayout>

    <LinearLayout
       style="@style/buttonS">

        <Button
            android:id="@+id/btn7"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnMultiplicacion"
            style="@style/buttonNum"
            android:onClick="operaciones"
            android:text="@string/btnMultiplicacion" />
    </LinearLayout>

    <LinearLayout
        style="@style/buttonS">

        <Button
            android:id="@+id/btn4"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnResta"
            style="@style/buttonNum"
            android:onClick="operaciones"
            android:text="@string/btnResta" />
    </LinearLayout>

    <LinearLayout
        style="@style/buttonS">

        <Button
            android:id="@+id/btn1"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnSuma"
            style="@style/buttonNum"
            android:onClick="operaciones"
            android:text="@string/btnSuma" />
    </LinearLayout>

    <LinearLayout
        style="@style/buttonS">

        <Button
            android:id="@+id/btnMasMenos"
            style="@style/buttonNum"
            android:onClick="transformaciones"
            android:text="@string/btnMasMenos" />

        <Button
            android:id="@+id/btn0"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/btnPunto"
            style="@style/buttonNum"
            android:onClick="insertarNumero"
            android:text="@string/btnPunto" />

        <Button
            android:id="@+id/btnResultado"
            style="@style/buttonNum"
            android:onClick="resultado"
            android:text="@string/btnRes" />
    </LinearLayout>

</LinearLayout>